improved configs implemented grpc funcs new service authentication improved service dependencies added rest auth middleware improved handler rest dependencies Validator added rest userAuthenticate
